Fix too small font on language selection under project
Made for this ticket: https://meta.trac.wordpress.org/ticket/6066

--- a/wordpress.org/public_html/wp-content/plugins/wporg-gp-customizations/templates/style.css
+++ b/wordpress.org/public_html/wp-content/plugins/wporg-gp-customizations/templates/style.css
@@ -1567,6 +1567,7 @@ ul.projects-dropdown li > a > span {
 	text-align: center;
 	border-collapse: collapse;
 	table-layout: fixed;
+	font-size: 15px;
 }
 
 .stats-table table thead {
